--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
-    
+    <!-- main layout grid -->
+    <div class="main-grid">
+        <button type="button">New Game</button>
+        <!-- game board w/ grid -->
+        <div id="board">
+            <div id="1A" class="cell"></div>
+        </div>
+    </div>
 </body>
 </html>
