beginning game logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- main layout grid -->
     <div class="main-grid">
-        <button type="button">New Game</button>
+        <button type="button" class="s-btn">New Game</button>
         <!-- game board w/ grid -->
         <div id="board">
             <div id="1A" class="cell"></div>
