--- a/index.html
+++ b/index.html
@@ -11,10 +11,70 @@
 <body>
     <!-- main layout grid -->
     <div class="main-grid">
-        <button type="button" class="s-btn">New Game</button>
+        <button type="button" id="s-btn" class="s-btn">New Game</button>
         <!-- game board w/ grid -->
         <div id="board">
-            <div id="1A" class="cell"></div>
+            <!-- row 1 -->
+            <div class="row">
+                <div id="1A" class="cell"></div>
+                <div id="2A" class="cell"></div>
+                <div id="3A" class="cell"></div>
+                <div id="4A" class="cell"></div>
+                <div id="5A" class="cell"></div>
+                <div id="6A" class="cell"></div>
+                <div id="7A" class="cell"></div>
+            </div>      
+            <!-- row 2 -->
+            <div class="row">
+                <div id="1B" class="cell"></div>
+                <div id="2B" class="cell"></div>
+                <div id="3B" class="cell"></div>
+                <div id="4B" class="cell"></div>
+                <div id="5B" class="cell"></div>
+                <div id="6B" class="cell"></div>
+                <div id="7B" class="cell"></div>
+            </div>
+            <!-- row 3 -->
+            <div class="row">
+                <div id="1C" class="cell"></div>
+                <div id="2C" class="cell"></div>
+                <div id="3C" class="cell"></div>
+                <div id="4C" class="cell"></div>
+                <div id="5C" class="cell"></div>
+                <div id="6C" class="cell"></div>
+                <div id="7C" class="cell"></div>
+            </div>
+            <!-- row 4 -->
+            <div class="row">
+                <div id="1D" class="cell"></div>
+                <div id="2D" class="cell"></div>
+                <div id="3D" class="cell"></div>
+                <div id="4D" class="cell"></div>
+                <div id="5D" class="cell"></div>
+                <div id="6D" class="cell"></div>
+                <div id="7D" class="cell"></div>
+            </div>    
+            <!-- row 5 -->
+            <div class="row">
+                <div id="1E" class="cell"></div>
+                <div id="2E" class="cell"></div>
+                <div id="3E" class="cell"></div>
+                <div id="4E" class="cell"></div>
+                <div id="5E" class="cell"></div>
+                <div id="6E" class="cell"></div>
+                <div id="7E" class="cell"></div>
+            </div>
+            <!-- row 6 -->
+            <div class='row'>
+                <div id="1F" class="cell"></div>
+                <div id="2F" class="cell"></div>
+                <div id="3F" class="cell"></div>
+                <div id="4F" class="cell"></div>
+                <div id="5F" class="cell"></div>
+                <div id="6F" class="cell"></div>
+                <div id="7F" class="cell"></div>
+            </div>
+            
         </div>
     </div>
 </body>
