--- a/index.html
+++ b/index.html
@@ -28,53 +28,53 @@
             </div>
             <!-- row 2 -->
             <div class="row">
-                <div id="cell_1_0" class="cell"></div>
-                <div id="cell_1_1" class="cell"></div>
-                <div id="cell_1_2" class="cell"></div>
-                <div id="cell_1_3" class="cell"></div>
-                <div id="cell_1_4" class="cell"></div>
-                <div id="cell_1_5" class="cell"></div>
-                <div id="cell_1_6" class="cell"></div>
+                <div id="cell_1_0" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_1" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_2" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_3" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_4" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_5" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_1_6" class="cell"><span class="piece player0"></span></div>
             </div>
             <!-- row 3 -->
             <div class="row">
-                <div id="cell_2_0" class="cell"></div>
-                <div id="cell_2_1" class="cell"></div>
-                <div id="cell_2_2" class="cell"></div>
-                <div id="cell_2_3" class="cell"></div>
-                <div id="cell_2_4" class="cell"></div>
-                <div id="cell_2_5" class="cell"></div>
-                <div id="cell_2_6" class="cell"></div>
+                <div id="cell_2_0" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_1" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_2" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_3" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_4" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_5" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_2_6" class="cell"><span class="piece player0"></span></div>
             </div>
             <!-- row 4 -->
             <div class="row">
-                <div id="cell_3_0" class="cell"></div>
-                <div id="cell_3_1" class="cell"></div>
-                <div id="cell_3_2" class="cell"></div>
-                <div id="cell_3_3" class="cell"></div>
-                <div id="cell_3_4" class="cell"></div>
-                <div id="cell_3_5" class="cell"></div>
-                <div id="cell_3_6" class="cell"></div>
+                <div id="cell_3_0" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_1" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_2" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_3" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_4" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_5" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_3_6" class="cell"><span class="piece player0"></span></div>
             </div>    
             <!-- row 5 -->
             <div class="row">
-                <div id="cell_4_0" class="cell"></div>
-                <div id="cell_4_1" class="cell"></div>
-                <div id="cell_4_2" class="cell"></div>
-                <div id="cell_4_3" class="cell"></div>
-                <div id="cell_4_4" class="cell"></div>
-                <div id="cell_4_5" class="cell"></div>
-                <div id="cell_4_6" class="cell"></div>
+                <div id="cell_4_0" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_1" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_2" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_3" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_4" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_5" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_4_6" class="cell"><span class="piece player0"></span></div>
             </div> 
             <!-- row 6 -->
             <div class='row'>
-                <div id="cell_5_0" class="cell"></div>
-                <div id="cell_5_1" class="cell"></div>
-                <div id="cell_5_2" class="cell"></div>
-                <div id="cell_5_3" class="cell"></div>
-                <div id="cell_5_4" class="cell"></div>
-                <div id="cell_5_5" class="cell"></div>
-                <div id="cell_5_6" class="cell"></div>
+                <div id="cell_5_0" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_1" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_2" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_3" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_4" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_5" class="cell"><span class="piece player0"></span></div>
+                <div id="cell_5_6" class="cell"><span class="piece player0"></span></div>
             </div>
         </div>
     </div>
