--- a/index.html
+++ b/index.html
@@ -12,70 +12,58 @@
     <!-- main layout grid -->
     <div class="main-grid">
         <button type="button" id="s-btn" class="s-btn">New Game</button>
-        <div id="game_info" class="c-top"></div>
-        <div id="game_status" class="c-top"></div>
+        <!-- <div id="game_info" class="c-top"></div>
+        <div id="game_status" class="c-top"></div> -->
         <!-- game board w/ grid -->    
         <div id="board">>
             <!-- row 1 -->
-            <div class="row">
-                <div id="cell_0_0" class="cell"></div>
-                <div id="cell_0_1" class="cell"></div>
-                <div id="cell_0_2" class="cell"></div>
-                <div id="cell_0_3" class="cell"></div>
-                <div id="cell_0_4" class="cell"></div>
-                <div id="cell_0_5" class="cell"></div>
-                <div id="cell_0_6" class="cell"></div>                  
-            </div>
+            <div id="cell_0_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_0_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_0_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_0_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_0_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_0_5" data-column="5" class="cell"><span class="cel player0"></span></div>                
+            <div id="cell_0_6" data-column="6" class="cell"><span class="cel player0"></span></div>
             <!-- row 2 -->
-            <div class="row">
-                <div id="cell_1_0" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_1" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_2" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_3" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_4" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_5" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_1_6" class="cell"><span class="piece player0"></span></div>
-            </div>
+            <div id="cell_1_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_5" data-column="5" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_1_6" data-column="6" class="cell"><span class="cel player0"></span></div>
             <!-- row 3 -->
-            <div class="row">
-                <div id="cell_2_0" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_1" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_2" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_3" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_4" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_5" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_2_6" class="cell"><span class="piece player0"></span></div>
-            </div>
+            <div id="cell_2_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_5" data-column="5" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_2_6" data-column="6" class="cell"><span class="cel player0"></span></div>
             <!-- row 4 -->
-            <div class="row">
-                <div id="cell_3_0" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_1" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_2" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_3" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_4" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_5" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_3_6" class="cell"><span class="piece player0"></span></div>
-            </div>    
+            <div id="cell_3_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_5" data-column="5" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_3_6" data-column="6" class="cell"><span class="cel player0"></span></div>  
             <!-- row 5 -->
-            <div class="row">
-                <div id="cell_4_0" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_1" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_2" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_3" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_4" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_5" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_4_6" class="cell"><span class="piece player0"></span></div>
-            </div> 
+            <div id="cell_4_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_5" data-column="5" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_4_6" data-column="6" class="cell"><span class="cel player0"></span></div>
             <!-- row 6 -->
-            <div class='row'>
-                <div id="cell_5_0" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_1" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_2" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_3" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_4" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_5" class="cell"><span class="piece player0"></span></div>
-                <div id="cell_5_6" class="cell"><span class="piece player0"></span></div>
-            </div>
+            <div id="cell_5_0" data-column="0" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_1" data-column="1" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_2" data-column="2" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_3" data-column="3" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_4" data-column="4" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_5" data-column="5" class="cell"><span class="cel player0"></span></div>
+            <div id="cell_5_6" data-column="6" class="cell"><span class="cel player0"></span></div>
         </div>
     </div>
 </body>
