fixed grid alignment issue

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script defer src="js/app.js"></script>
 </head>
 
-<body>
+<body id="fsm">
     <!-- main layout grid -->
     <div class="main-grid">
         <button type="button" id="s-btn" class="s-btn">New Game</button>
-        <!-- <div id="game_info" class="c-top"></div>
-        <div id="game_status" class="c-top"></div> -->
+        <div id="game_info" class="c-top"></div>
+        <div id="game_status" class="c-top"></div>
         <!-- game board w/ grid -->    
-        <div id="board">>
+        <div id="board">
             <!-- row 1 -->
             <div id="cell_0_0" data-column="0" class="cell"><span class="cel player0"></span></div>
             <div id="cell_0_1" data-column="1" class="cell"><span class="cel player0"></span></div>
